welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:10: error: reassignment to val
			n=i
                         ^